...
        app:layout_constraintBottom_toTopOf="@+id/guidelineBOT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineMID" />

    <Button
        android:id="@+id/viewSGWCampusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/concordia_yellow"
        android:elevation="8dp"
        android:fontFamily="@font/inter"
        android:text="@string/sgw_campus"
...
