...
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/campusSwitch"
                app:layout_constraintTop_toTopOf="@+id/campusSwitch" />

            <TextView
                android:id="@+id/ToCampus"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter"
                android:text="NAN"
...
